--- a/html-templates/intern.html
+++ b/html-templates/intern.html
@@ -1,23 +1,15 @@
 <!--Card for intern information-->
 
-<div class="card hovercard">
-    <div class="cardheader">
-        <div class="card-heading">
-            {{name}}
-        </div>
-
-        <div class="role">
-            <img src="#"></img>
-            {{role}}
-        </div>
+<div class="card text-white bg-primary mb-3" style="max-width: 20rem;">
+    <div class="card-header">
+        <h3 class="card-title">{{name}}</h3>
+        <h4 class="card-subtitle">{{role}}</h4>
     </div>
-    <div class="card-body">
-        <div class="desc">
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">ID: {{id}}</li>
-                <li class="list-group-item">Email: {{email}}</li>
-                <li class="list-group-item">School: {{school}}</li>
-            </ul>
-        </div>
+    <div class="card-body bg-secondary">
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item">ID: {{id}}</li>
+            <li class="list-group-item">Email: {{email}}</li>
+            <li class="list-group-item">University: {{school}}</li>
+        </ul>
     </div>
 </div>
