--- a/html-templates/main.html
+++ b/html-templates/main.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/pulse.css" type="text/css">
     <title>{{teamTitle}}</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <link href="https://fonts.googleapis.com/css?family=Comfortaa&display=swap" rel="stylesheet">
-
 </head>
 
 <body>
+    <div class="jumbotron bg-primary text-white text-center">
+        <h1>{{teamTitle}}</h1>
+    </div>
 
-    <h1 id="teamName">{{teamTitle}}</h1>
-
-    <!--Container contains cards that hold employee information-->
-    <div class="container">
+    <div class="d-flex flex-wrap justify-content-around p-2 bd-highlight">
 
         {{cards}}
 
